--- a/Week1/test/index.html
+++ b/Week1/test/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Van</title>
-    <link rel="stylesheet" href="style/start.css">
-</head>
-<body>
-    <div id="enter">
-        <img id="logoenter" src="imgs/naVblackSVG.svg"/>
-        <div id="whitebar"></div>
-    </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Van</title>
+		<link rel="stylesheet" href="style/start.css" />
+	</head>
+	<body>
+		<div id="enter">
+			<img id="logoenter" src="imgs/naVblackSVG.svg" />
+			<div id="whitebar"></div>
+		</div>
+	</body>
 </html>
